 30-Jan-2020  V0.955 update dependencies
 30-Jan-2020  V0.956 Change PDBx MOCK repository organization from SANDBOX to FTP repository layout, handle missing data for
                     chromophores, and update configuration example file.
 30-Jan-2020  V0.957 Update dependency version for rcsb.utils.config
  2-Feb-2020  V0.958 Corrections keyword arguments in RepoLoadWorkflow()
  3-Feb-2020  V0.959 Split configuration file into site and schema portions
  5-Feb-2020  V0.960 Fix some inconsistencies among repository holdings collections and add consistency checks for
                     entity instance validation features
  6-Feb-2020  V0.961 Add additional chimeric and multi-reference test cases and suppress mongodb tracebacks on replace failures
  9-Feb-2020  V0.962 Cleanup combined software program list, separate tests to detect schema differences, add support for
                     schema updates to existing collections, update schema update CLI with compare methods.
 11-Feb-2020  V0.963 Expose upsertFlag on mongo update method wrapper.
 12-Feb-2020  V0.964 Extend entity and entity instance annotations with convalent linkage details
 12-Feb-2020  V0.965 Add model_ids to entry_container_identifiers and update dependencies
 14-Feb-2020  V0.966 Add MongoDb maintenance operations, point example config to development branch assets, update enums with
                     BIRD_MOLECULE_NAME.
 19-Feb-2020  V0.967 Initialize zero values for feature counts and coverage
 26-Feb-2020  V0.968 Add missing provenance source for rcsb_chem_comp_synonyms, filter case duplicates for taxonomy common
                     names, entity descriptions, and gene names.
  5-Mar-2020  V0.969 Allow category nested contexts and remote tests for uniprot-core
 17-Mar-2020  V0.970 Add separate primary citation category and offset for zero based sequence database references
 24-Mar-2020  V0.971 Add support for rcsb_chem_comp_annotation and various fixes for schema builder.