@@ -225,3 +225,4 @@
   5-Mar-2020  V0.969 Allow category nested contexts and remote tests for uniprot-core
  17-Mar-2020  V0.970 Add separate primary citation category and offset for zero based sequence database references
  24-Mar-2020  V0.971 Add support for rcsb_chem_comp_annotation and various fixes for schema builder.
+ 27-Mar-2020  V0.972 Add support for rcsb_repository_holdings_removed.repository_content_types
